[package]
name = "wpr"
version = "0.1.0"
edition = "2021"
authors = ["Keith Noguchi <hack@noguchi.us>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wpr"

[dependencies]
actix-web = "4"
config = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
