[package]
name = "wpr"
version = "0.1.0"
edition = "2021"
authors = ["Keith Noguchi <hack@noguchi.us>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wpr"

[dependencies]
actix-web = "4"
config = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
